multi-chain token deployment script

--- a/foundry.toml
+++ b/foundry.toml
@@ -10,12 +10,12 @@ fs_permissions = [{ access = "read", path = "./" }]
 
 [rpc_endpoints]
 ethereumSepolia = "${ETHEREUM_SEPOLIA_RPC_URL}"
-optimismGoerli = "${OPTIMISM_GOERLI_RPC_URL}"
+optimismGoerli = "${OPTIMISM_SEPOLIA_RPC_URL}"
 avalancheFuji = "${AVALANCHE_FUJI_RPC_URL}"
 arbitrumSepolia = "${ARBITRUM_SEPOLIA_RPC_URL}"
+baseSepolia = "${BASE_SEPOLIA_RPC_URL}"
 polygonMumbai = "${POLYGON_MUMBAI_RPC_URL}"
 bnbChainTestnet = "${BNB_CHAIN_TESTNET_RPC_URL}"
-baseSepolia = "${BASE_SEPOLIA_RPC_URL}"
 metisSepolia = "${METIS_SEPOLIA_RPC_URL}"
 zksyncSepolia = "${ZKSYNC_SEPOLIA_RPC_URL}"
 scrollSepolia = "${SCROLL_SEPOLIA_RPC_URL}"
@@ -37,10 +37,10 @@ inkSepolia = "${INK_SEPOLIA_RPC_URL}"
 
 [etherscan]
 sepolia = { key = "${ETHEREUM_SEPOLIA_API_KEY}" }
-optimismGoerli = { key = "${ARBITRUM_SEPOLIA_API_KEY}" }
-avalancheFuji = { key = "${ARBITRUM_SEPOLIA_API_KEY}" }
+optimismSepolia = { key = "${OPTIMISM_SEPOLIA_RPC_URL}" }
+avalancheFuji = { key = "${AVALANCHE_FUJI_RPC_URL}" }
 arbitrumSepolia = { key = "${ARBITRUM_SEPOLIA_API_KEY}" }
-polygonMumbai = { key = "${ARBITRUM_SEPOLIA_API_KEY}" }
+polygonAmoy = { key = "${POLYGON_AMOY_RPC_URL}" }
 baseSepolia = { key = "${BASE_SEPOLIA_API_KEY}" }
 zksyncSepolia = { key = "${ARBITRUM_SEPOLIA_API_KEY}" }
 scrollSepolia = { key = "${ARBITRUM_SEPOLIA_API_KEY}" }
